infra/terraform/k8s-manifests/sandbox/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctdl-xtra-api
  namespace: ctdl-xtra
  labels:
    app.kubernetes.io/name: ctdl-xtra
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: ctdl-xtra
    environment: sandbox
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ctdl-xtra
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
